# personal_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  SECURITY.md  SETUP.md  pre_requirements.md
docs/setup/: SCREENSHOTS_TODO.md
v1/: .env.example  .gitignore  README.md  ROADMAP.md  agent_host.py  install.sh  pyproject.toml  system_prompt.py
v1/config/: personality.md  triggers.yaml.example
v1/core/: __init__.py  paths.py
v1/launch_agents/: com.personal-agent.log-rotation.plist  com.personal-agent.relay.plist  com.personal-agent.scheduler.plist  com.personal-agent.web.plist  com.personal-agent.webui.plist  install.sh  uninstall.sh
v1/mcp_servers/: __init__.py  _untrusted.py  applescript.py  archive_server.py  calendar_server.py  canva_auth.py  canva_server.py  config_server.py  docs_server.py  drive_server.py  dropbox_auth.py  dropbox_server.py  eightsleep_auth.py  eightsleep_server.py  github_server.py  gmail_server.py  google_auth.py  learning_server.py  linkedin_auth.py  linkedin_server.py  mail_apple_server.py  maps_server.py  memory_server.py  music_apple_server.py  notes_apple_server.py  notion_server.py  photos_apple_server.py  reddit_server.py  reminders_apple_server.py  reminders_server.py  sheets_server.py  spotify_auth.py  spotify_server.py  todoist_server.py  vision_server.py  weather_server.py  web_server.py  wikipedia_server.py  youtube_server.py
v1/mcp_servers/maps_providers/: __init__.py  google.py  osm.py
v1/memory/: __init__.py  embedder.py  store.py
v1/relay/: __init__.py  discord_relay.py  imessage_relay.py  run.py  sender.py  slack_relay.py  sms_relay.py  telegram_relay.py
v1/scheduler/: __init__.py  trigger_prompts.py  triggers.py
v1/tools/: __init__.py  analytics.py  backfill_embeddings.py  cost_report.py  eightsleep_set_password.py  env_watcher.py  install.py  repair_permissions.py  rotate_logs.py  token_health.py  uninstall.py
v1/web/: app.py  csrf.py  daemon_control.py  sessions.py  templating.py
v1/web/routes/: _env_io.py  about.py  chat.py  config.py  conversations.py  daemon.py  facts.py  home.py  install.py  learning.py  observability.py  reminders.py  settings.py  settings_transports.py  triggers.py  wizard.py
v1/web/static/: app.css
v1/web/templates/: 404.html  _chat_message.html  _chat_pending.html  _daemon_grid.html  base.html  chat.html  home.html
v1/web/templates/about/: privacy.html  setup.html
v1/web/templates/config/: env.html  index.html  personality.html  triggers.html
v1/web/templates/conversations/: detail.html  list.html
v1/web/templates/facts/: list.html
v1/web/templates/install/: welcome.html
v1/web/templates/learning/: index.html
v1/web/templates/observability/: analytics.html  cost.html  index.html  logs.html  tokens.html
v1/web/templates/reminders/: list.html
v1/web/templates/settings/: index.html  transports.html
v1/web/templates/wizard/: _field.html  _layout.html  _verify_panel.html  anthropic.html  behavior.html  done.html  google_oauth.html  launchagents.html  subagents_configure.html  subagents_pick.html  transport_config.html  transport_pick.html  triggers_email.html  triggers_schedule.html  welcome.html
